# airquality

./: .gitignore  MANIFEST.in  README.md  lambda_deploy.sh  lambda_function.py  pyproject.toml
dynamo_helpers/: README.md  remove_all.py  scratch.py  show_count_all.py
exploration/: README.md  message.json
mock_data/: README.md  mock_data.json  mock_data_stream.py  seed_sqs.py
src/: __init__.py  config.py  data_config.yml  process_new_aq_measurement.py  tmp_dynamodb.py  update_latest_aggregation.py  update_view.py
src/aws/: __init__.py  dynamodb.py  s3.py
src/models/: aggregratedmeasurement.py  airqualitymeasurement.py
src/models/validators/: airqualitymeasurement.json  airqualitymeasurement_config.py
src/views/: aggegrated_page.py  html.py
tests/: test_process_new_aq_measurement.py
tests/resources/: valid_measurements.json
