[project]
name = "aq"
version = "0.0.1"
requires-python=">=3.8"
dependencies = [
        "boto3",
        "PyYAML"
]


[project.optional-dependencies]
test = [
    "pytest"
]


[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'


[tool.setuptools]
script-files = []
packages = { find = {} }